[package]
name = "heliporto"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.42.0", features = ["json"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
